--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "antd": "^3.12.1",
     "axios": "^0.18.0",
     "isomorphic-fetch": "^2.2.1",
+    "moment": "^2.23.0",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-redux": "^6.0.0",
